--- a/Esercizio/css/style.css
+++ b/Esercizio/css/style.css
@@ -58,7 +58,7 @@ body{
     font-size: 2rem;
     margin-bottom: 30px;   
 }
-#section1 p, #section2 p, #section3 p, #section4 p{
+#section1 p, #section2 p, #section4 p{
     font-size: 1.2em;
     line-height: 2rem;
 }
@@ -93,6 +93,13 @@ body{
 blockquote{
     font-style: italic;
     margin: 50px 0;
+}
+#section3 p{
+    font-size: 1.5em;
+    line-height: 2.3rem;
+}
+#section3 .p1{
+    font-size: 1.1em;
 }
 .card{
     border: 1px solid #dee1e3;
