--- a/Esercizio/css/style-descktop.css
+++ b/Esercizio/css/style-descktop.css
@@ -36,9 +36,9 @@ body{
     background-image: url(/Esercizio/images/banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 500px;
+    width: 100%;
+    height: 700px;
     padding: 60px;
-    box-sizing: content-box;
 }
 .button{
     font-family: "Montserrat", sans-serif;
@@ -56,13 +56,14 @@ body{
     color: #25a2c3;
     line-height: 2rem;
     font-size: 2rem;
-    margin-bottom: 30px;   
+    margin-bottom: 30px;
+    margin-top: 10%;   
 }
 #section1 p, #section2 p, #section4 p{
     font-size: 1.2em;
     line-height: 2rem;
 }
-#section3, #section4{
+#section3 {
     text-align: center;
     background-size: contain;
     box-sizing: content-box;
@@ -71,6 +72,8 @@ body{
 #section2{
     text-align: center;
     margin: 80px;
+    box-sizing: content-box;
+    width: 100%;
 }
 .primo-blocco{
     display: inline-block;
@@ -83,6 +86,7 @@ body{
     font-weight: bold;
     color: #25a2c3;
     margin: 30px;
+    margin-left: 0;
 }
 .notebook{
     border-radius: 50%;
@@ -115,6 +119,9 @@ blockquote{
     border: 1px solid #dee1e3;
     margin-bottom: 30px;
     display: inline-block;
+    text-align: center;
+    box-sizing: content-box;
+    width: 33%;
 }
 .pcimage{
     width: 380px;
@@ -146,10 +153,12 @@ footer .p1{
     margin-top: 30px;
     color: #c8e7f0;
 }
-.spazio{
-    margin: 0 90px;
-    border: 1px solid #c8e7f0;
+.linea{
+    border-bottom: 1px solid #c8e7f0;
+    display: inline-block;
+    padding-bottom: 50px;
 }
+
 .material-symbols-outlined{
     vertical-align: text-bottom;
     background-color: whitesmoke;
